instalacion del file loader

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,5 +2,9 @@ html,
 body {
 	margin: 0;
 	color: white !important;
-	background-color: rgb(222, 18, 18);
+	background-color: rgb(208, 208, 208);
+}
+
+img {
+	width: 150px;
 }
